<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/purchase_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <TextView
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/purchase_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/purchase_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/purchase_feature_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/purchase_feature_repeated_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_repeated_task"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_repeat" />

                <TextView
                    android:id="@+id/purchase_feature_my_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_my_day"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_today" />

                <TextView
                    android:id="@+id/purchase_feature_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_tags"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_label" />

                <TextView
                    android:id="@+id/purchase_feature_dates_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_dates_in_list"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_event_available" />

                <TextView
                    android:id="@+id/purchase_feature_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_priority"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_flag" />

                <TextView
                    android:id="@+id/purchase_feature_list_progress_in_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/purchase_feature_list_progress_in_title"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_check_progress" />

            </LinearLayout>

            <TextView
                android:id="@+id/purchase_plan_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/purchase_plan_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_feature_description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/purchase_purchase_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/purchase_plan_hint">

                <ProgressBar
                    android:id="@+id/purchase_purchase_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/purchase_price_tag_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/purchase_price_tag_container" />

                <TextView
                    android:id="@+id/purchase_repeat_txt"
                    style="@style/TextView.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/purchase_common_error_hint"
                    android:textStyle="italic"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/purchase_repeat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/purchase_error_btn_text"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchase_repeat_txt" />

                <LinearLayout
                    android:id="@+id/purchase_price_tag_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.rvv.android.sample.PriceTagView
                        android:id="@+id/purchase_price_tag_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.rvv.android.sample.PriceTagView
                        android:id="@+id/purchase_price_tag_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/purchase_buy_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="72dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchase_price_tag_container"
                    tools:text="@string/navigation_premium"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/purchase_year_hint"
                    style="@style/TextView.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchase_forever_buy_btn"
                    tools:text="* 799 RUB в год"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/purchase_forever_buy_btn"
                    style="@style/TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_buy_forever"
                    android:textColor="?android:textColorSecondary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchase_buy_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/purchase_hint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/purchase_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/purchase_purchase_container" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
